# wandb-rs

./: Cargo.toml  README.md  schema.graphql
examples/get-project/: Cargo.toml
examples/get-project/src/: main.rs
examples/milestones/basic_artifacts/: Cargo.toml
examples/milestones/basic_artifacts/src/: main.rs
examples/milestones/run_log/: Cargo.toml
examples/milestones/run_log/src/: main.rs
examples/whoami/: Cargo.toml
examples/whoami/src/: main.rs
src/: core.rs  graphql.rs  lib.rs
src/api/: mod.rs
src/api/queries/: mod.rs  projects.rs  upsert_bucket.graphql  upsert_bucket.rs  viewer.rs
src/graphql/: project_by_name.graphql  projects.rs  viewer.rs
