[package]
name = "wandb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.11.0"
serde = "1.0.148"
reqwest = { version = "0.11.13", features = ["json"] }
url = "2.3.1"
regex = "1.7.0"

[dev-dependencies]
httpmock = "0.6.7"
tokio = "1.22.0"
